--- a/Api/Docs/Devices/ZTE/MF833.md
+++ b/Api/Docs/Devices/ZTE/MF833.md
@@ -23,6 +23,24 @@ foreach ($msgObjs as $msgObj) {
 $msgObjs; ## array of msg objs
 ```
 
+### getSelfContact:
+
+Get device contact
+
+```
+$result	= $apiObj->getSelfContact();
+$result; ## contact object 
+```
+
+### getMsIsdn:
+
+Phone number of the device
+
+```
+$result	= $apiObj->getMsIsdn();
+$result; ## string e.g. "12125101253"
+```
+
 ### getRssi:
 
 ```
@@ -64,3 +82,5 @@ $result; ## string e.g. "LTE BAND 3"
 $result	= $apiObj->getWanActiveBand();
 $result; ## string e.g. "LTE BAND 3"
 ```
+
+
