--- a/Api/Docs/Messages/Egress/V1.md
+++ b/Api/Docs/Messages/Egress/V1.md
@@ -15,6 +15,12 @@ $result	= $msgObj->getContent();
 $result; ## string data
 ```
 
+### getId:
+
+```
+$result	= $msgObj->getId();
+$result; ## int
+```
 ### getSender:
 
 ```
@@ -22,9 +28,9 @@ $result	= $msgObj->getSender();
 $result; ## contact obj
 ```
 
-### getId:
+### getReceiver:
 
 ```
-$result	= $msgObj->getId();
-$result; ## int
+$result	= $msgObj->getReceiver();
+$result; ## contact obj
 ```
