--- a/Api/Docs/Contacts/V1.md
+++ b/Api/Docs/Contacts/V1.md
@@ -1,15 +1,28 @@
 #initialize
 
 ```
-//$apiObj	= "getDeviceOrApi";
+//From api obj
 $cObj		= $apiObj->getSelfContact();
+
+//OR from message obj
+$cObj		= $msgObj->getSender();
+$cObj		= $msgObj->getReceiver();
 ```
 
 ## Methods:
 
-### getContent:
+### getNumber:
 
 ```
-$result	= $cObj->getContent();
-$result; ## string data
+$result	= $cObj->getNumber();
+$result; ## string e.g. +12125101253
+```
+
+### getName:
+
+only if in phone book
+
+```
+$result	= $cObj->getName();
+$result; ## string e.g. "John Doe"
 ```
