sending text works

--- a/Api/Docs/Contacts/V1.md
+++ b/Api/Docs/Contacts/V1.md
@@ -11,6 +11,22 @@ $cObj		= $msgObj->getReceiver();
 
 ## Methods:
 
+### sendText:
+
+```
+$nbr		= "12139778722";
+$text		= "Hello darling";
+$result	= $cObj->sendText($nbr, $text);
+$result; ## message obj or throw on error
+```
+
+### getMessages:
+
+```
+$result	= $cObj->getMessages();
+$result; ## array of message objs
+```
+
 ### getNumber:
 
 ```
