--- a/Api/Docs/Messages/V1.md
+++ b/Api/Docs/Messages/V1.md
@@ -1,7 +1,7 @@
 #initialize
 
 ```
-//$apiObj	= "getDeviceorApi";
+//$apiObj	= "getDeviceOrApiOrContact";
 $msgObjs	= $apiObj->getMessages();
 $msgObj	= reset($msgObjs);
 ```
